[tool.poetry]
name = "webhomeworkpart2"
version = "0.1.0"
description = ""
authors = ["Bohdan Bokariev <b.bokariev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
faker = "^19.10.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
